--- a/Gilles Vidal Campus Landing Page/src/Components/Contact/Contact.css
+++ b/Gilles Vidal Campus Landing Page/src/Components/Contact/Contact.css
@@ -78,13 +78,15 @@ font-style: normal;
 font-weight: 400;
 line-height: 24px; /* 150% */
 }
+
+
 .contact-form-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
     gap: 40px;
-    margin: 10%;
+   
     width: 80%;
     color: var(--neutro-900, #101010);
 text-align: center;
@@ -173,7 +175,15 @@ padding: 16px 40px 16px 16px;/* Ajusta el espaciado entre campos aquí */
     gap: 10px;
     background: #101010;
   }
-  
+  .contact-btn:hover{
+    background: var(--neutro-800, #2E2E2E);
+    cursor: pointer;
+  }
+   .contact-btn::selection{
+    border: 1px solid var(--neutro-100, #FFF);
+    background: var(--neutro-900, #101010);
+    cursor: pointer;
+  }
   .contact-btn > p {
     color: #FFF;
     font-family: Bebas Neue;
@@ -289,7 +299,13 @@ line-height: 24px; /* 150% */
   .contact-hero-content>p{
     width: 60%;
   }
-
+  .form-box-box{
+    padding:  100px 0 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 /* Media query para tabletas */
