--- a/Gilles Vidal Campus Landing Page/src/Components/Inscribete/Inscribete.css
+++ b/Gilles Vidal Campus Landing Page/src/Components/Inscribete/Inscribete.css
@@ -45,6 +45,15 @@ gap: 32px;
     align-items: center;
     gap: 10px;
 }
+.inscribete-btn:hover{
+    background: var(--neutro-800, #2E2E2E);
+    cursor: pointer;
+  }
+   .inscribete-btn::selection{
+    border: 1px solid var(--neutro-100, #FFF);
+    background: var(--neutro-900, #101010);
+    cursor: pointer;
+  }
 .inscribete-btn>p{
     color: #FFF;
 font-family: Bebas Neue;
