--- a/Gilles Vidal Campus Landing Page/src/Components/Contact/Contact.css
+++ b/Gilles Vidal Campus Landing Page/src/Components/Contact/Contact.css
@@ -392,11 +392,28 @@ gap: 24px;
  padding: 0px 40px 80px 40px;
  flex-direction: column;
  justify-content: center;
- align-items: flex-end;
+ align-items: center;
  gap: 40px;
  margin: 0;
  }
+ .contact-btn {
 
+  width: 200px; 
+ 
+}
+
+.contact-btn > p {
+  color: var(--neutro-100, #FFF);
+
+  /* H4 */
+  font-family: Bebas Neue;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 116.667% */
+  letter-spacing: 0.72px;
+  text-transform: uppercase;
+}
   /* Estilos adicionales para dispositivos móviles */
 }
 
