--- a/Gilles Vidal Campus Landing Page/src/Components/Modal/Modal.css
+++ b/Gilles Vidal Campus Landing Page/src/Components/Modal/Modal.css
@@ -94,3 +94,100 @@ transition: 0.3s;
     cursor: pointer;
     scale: 1.3;
 }
+
+
+/* Media query para tamaños de pantalla de escritorio */
+@media (min-width: 1024px) {
+    /* Estilos específicos para escritorio */
+  
+  
+  }
+  
+  /* Media query para tabletas */
+  @media (min-width: 744px) and (max-width: 1024px) {
+    /* Estilos específicos para tabletas */
+   
+
+    
+  }
+  
+  
+  /* Media query para dispositivos móviles */
+  @media (max-width: 744px) {
+
+    .modal-global-content{
+        display: flex;
+        height: 337px;
+        
+        flex-direction: column;
+        align-items: center;
+     
+        flex-shrink: 0;
+     
+
+
+
+        text-align: center;
+        position: relative;
+        
+         
+    
+      
+      border: 4px solid  #D2D2D2;
+      background: #FFF;
+    }
+    .done-icon{
+        width: 86px;
+        height: 87px;
+        flex-shrink: 0;
+    }
+      
+    .modal-content{
+        display: flex;
+       width: calc(100% - 64px);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 8px;
+        align-self: stretch;
+        padding: 32px;
+    }
+    .send-text{
+        color: var(--neutro-900, #101010);
+text-align: center;
+
+/* Button S */
+font-family: Bebas Neue;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px; /* 116.667% */
+letter-spacing: 0.72px;
+text-transform: uppercase;
+    }
+
+    .send-text-secondary{
+        color: var(--neutro-900, #101010);
+text-align: center;
+
+/* Link */
+font-family: Bebas Neue;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 150% */
+letter-spacing: 0.96px;
+text-transform: uppercase;
+    }
+
+
+    
+.modal-btn-close{
+    width: 32px;
+height: 32px;
+position: absolute;
+right: 12px;
+top: 12px;
+transition: 0.3s;
+}
+    }
