--- a/Gilles Vidal Campus Landing Page/src/Components/Campus/Campus.css
+++ b/Gilles Vidal Campus Landing Page/src/Components/Campus/Campus.css
@@ -191,13 +191,13 @@ line-height: 24px;
     /* Estilos específicos para escritorio */
     .campus-info{
         display: flex;
-width: 1128px;
+width:calc(100% - 48px);
 padding: 24px;
 justify-content: center;
 align-items: flex-start;
 align-content: flex-start;
-gap: 40px;
-flex-wrap: wrap;
+gap: 35px;
+flex-wrap: nowrap;
 }
  
 
