--- a/Gilles Vidal Campus Landing Page/src/Components/Inscripcion/Inscripcion.css
+++ b/Gilles Vidal Campus Landing Page/src/Components/Inscripcion/Inscripcion.css
@@ -1,3 +1,6 @@
+
+
+
 .inscripcion-content{
     padding-top: 80px;
     display: flex;
@@ -41,7 +44,7 @@ gap: 40px;
 background: #FFF;
 margin-bottom: 100px;
 }
-.inscripcion-form-label{
+.inscripcion-form-div{
     display: flex;
     height: 48px;
     padding: 8px 16px;
@@ -51,7 +54,7 @@ margin-bottom: 100px;
     border-radius: 4px;
 background: #101010;
 }
-.inscripcion-form-label>p{
+.inscripcion-form-div>p{
     flex: 1 0 0;
     color: #FFF;
 
@@ -285,7 +288,7 @@ flex-direction: column;
 align-items: flex-start;
 gap: 8px;
 }
-.radio-button-label{
+.radio-button-div{
     display: flex;
     padding: 0px 8px;
     align-items: center;
