--- a/Gilles Vidal Campus Landing Page/src/Components/Header.css
+++ b/Gilles Vidal Campus Landing Page/src/Components/Header.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,900&display=swap');
 
 
-.header{
+.header-overlay{
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.50) 0%, rgba(255, 255, 255, 0.00) 100%);
 }
 
