--- a/Gilles Vidal Campus Landing Page/src/Components/Header.css
+++ b/Gilles Vidal Campus Landing Page/src/Components/Header.css
@@ -3,9 +3,11 @@
 
 .header-overlay{
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.50) 0%, rgba(255, 255, 255, 0.00) 100%);
+ 
 }
 
 .header-content{
+   
     display: flex;
 justify-content: flex-end;
 align-items: center;
@@ -174,7 +176,8 @@ gap: 16px;
 
 
   .hamburger-menu-option-box{
-    width:calc(100% - 80px);
+    
+    width:calc(100%);
     display: flex;
 padding: 24px 40px;
 justify-content: center;
@@ -239,7 +242,7 @@ border-bottom: 1px solid var(--primary-500, #187BD3);
     /* Estilos específicos para tabletas */
     .header{
         display: inline-flex;
-     width: calc(100% - 128px);
+     width: calc(100% );
   
     flex-direction: column;
     justify-content: center;
