--- a/Gilles Vidal Campus Landing Page/src/Components/Header.css
+++ b/Gilles Vidal Campus Landing Page/src/Components/Header.css
@@ -177,7 +177,7 @@ gap: 16px;
 
   .hamburger-menu-option-box{
     
-    width:calc(100%);
+    width:calc(100% - 80px);
     display: flex;
 padding: 24px 40px;
 justify-content: center;
