--- a/Gilles Vidal Campus Landing Page/src/Components/Hero/Hero.css
+++ b/Gilles Vidal Campus Landing Page/src/Components/Hero/Hero.css
@@ -97,7 +97,7 @@ letter-spacing: 0.96px;
     }
     .hero-photo{
    
-        background-image: url(/PhotoPortadaLight.svg);
+        background-image: url(/PhotoPortada.png);
         background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el div */
         /* Otros estilos de fondo como repetición, posición, etc. */
         width: 100%;
@@ -125,7 +125,7 @@ letter-spacing: 0.96px;
     }
     .hero-photo{
    
-        background-image: url(/PhotoPortadaLight.svg);
+        background-image: url(/PhotoPortada.png);
         background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el div */
         /* Otros estilos de fondo como repetición, posición, etc. */
         width: 100%;
@@ -171,7 +171,7 @@ gap: 8px;
 
     .hero-photo{
    
-        background-image: url(/PhotoPortadaLight.svg);
+        background-image: url(/PhotoPortada.png);
         background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el div */
         /* Otros estilos de fondo como repetición, posición, etc. */
         width: calc(100% - 80px);
