--- a/ClimaTecnico/src/Components/Hero/Hero.css
+++ b/ClimaTecnico/src/Components/Hero/Hero.css
@@ -121,6 +121,14 @@ flex: 1 0 0;
 /* Media query para desktop */
 
 @media (min-width: 1024px) {
+    .hero-content{
+        display: flex;
+        width: calc(100% - 160px);
+padding: 32px 80px;
+justify-content: space-around;
+align-items: center;
+gap: 10px;
+    }
     .hero-background {
         height: 863px;
       }
@@ -130,16 +138,16 @@ flex: 1 0 0;
     }
     .hero-container{
         width: calc(100% - 0px);
-        height: calc( 863px - 340px);
+        height: calc( 863px - 327px);
         justify-content: space-around;
-        align-items: center;
-        padding: 170px 0px 170px 0px;
+        align-items: flex-start;
+        padding: 157px 0px 170px 0px;
     }
     .hero-info-container{
   
         display: flex;
-        width: calc(540px - 24px);
-        padding: 0px 24px;
+        min-width: calc(540px - 0px);
+        padding: 0px;
         flex-direction: column;
         align-items: flex-start;
         gap: 24px;
@@ -159,7 +167,7 @@ flex: 1 0 0;
         align-self: stretch;
     /* Text/M */
     font-family: Montserrat;
-    font-size: 32px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 500;
     line-height: 38px; /* 118.75% */
@@ -233,14 +241,14 @@ line-height: 20px; /* 142.857% */
         height: 607px;    
     }
 
-    .hero-container{
+  
+    .hero-content{
         display: flex;
-        padding: 182px 0 80px 0;
-      
+        width: calc(100% - 80px);
+        padding: 175px 40px 80px 40px;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
-        gap: 79px;
+        gap: 96px;
     }
     .hero-info-container{
   
@@ -275,7 +283,7 @@ gap: 8px;
             width: 582px;
             /* Text/M */
             font-family: Montserrat;
-            font-size: 32px;
+            font-size: 18px;
             font-style: normal;
             font-weight: 500;
             line-height: 38px; /* 118.75% */
@@ -349,8 +357,12 @@ align-self: stretch;
     .hero-overlay{
         height: 493px;    
     }
-    
     .hero-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .hero-content{
         display: flex;
         padding: 140px 21px 7px 21px;
       
