--- a/ClimaTecnico/src/Components/Footer.css
+++ b/ClimaTecnico/src/Components/Footer.css
@@ -1,5 +1,5 @@
 
-@media (min-width: 744px) {
+@media (min-width: 1024px) {
     
 .footer-movile{
     display: none;
@@ -53,6 +53,7 @@ line-height: 20px; /* 142.857% */
 @media (min-width: 1024px) {
      .logo-footer-desktop{
         display: block;
+       
     }
     .logo-footer-tablet{
 display: none;
@@ -82,34 +83,75 @@ flex-wrap: wrap;
     /* Media query para tabletas */
     @media (min-width: 744px) and (max-width: 1024px) {
     
-        .logo-footer-desktop{
+        .footer-desktop{
             display: none;
-        }
-        .logo-footer-tablet{
-    display: block;
-        }
-        .logo-footer-mobile{
-            display: none;
-        }
-        .footer-info-container{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-end;
-            gap: 32px;
-            align-self: stretch;
-            width: 100%;
-        }
-        .links-footer-container{
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            gap: 40px;
-            align-self: stretch;
-        }
-        .logo-instagram{
-            padding-left: 14px;
-        }
+         }
+       .footer-movile{
+        display: flex;
+        padding: 32px 40px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 32px;
+        flex-shrink: 0;
+        background: var(--Primary-900, #104B76);
+       }
+    
+       .logo-footer-desktop{
+        display: none;
+    }
+    .logo-footer-tablet{
+    display: none;
+    }
+    .logo-footer-mobile{
+        display: block;
+    }
+    
+    
+    .footer-info-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 24px;
+        align-self: stretch;
+    }
+    .links-footer-container{
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        align-content: flex-start;
+        gap: 32px;
+        flex-wrap: wrap;
+    }
+    .links-footer-container>a{
+        color: var(--Neutral-100, #FFF);
+    
+    /* Components/Link */
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.48px;
+    }
+    .logo-copyright-container{
+        display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    align-self: stretch;
+    }
+    .logo-copyright-container>p{
+        color: var(--Neutral-100, #FFF);
+    
+    /* Text/XS */
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 142.857% */
+    }
     }
 
 
