--- a/ClimaTecnico/src/App.css
+++ b/ClimaTecnico/src/App.css
@@ -14,8 +14,39 @@ main{
 html {
     scroll-behavior: smooth;
   }
-  
-  a {
+  a{
     text-decoration: none;
-    /* Otros estilos para los enlaces, como color y hover, si es necesario */
   }
+  
+  .link {
+    padding-bottom: 2px;
+    text-decoration: none;
+    border-bottom: 2px solid transparent; /* Inicialmente sin subrayado */
+    transition: border-color 0.2s ease; 
+  }
+
+  .link:hover {
+    border-color: #FFF;
+    color: var(--Neutral-100, #FFF);
+
+    /* Components/Link */
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.48px;
+  }
+  .link:active{
+    color: #EB6933;
+    border-color: #EB6933;
+  }
+  .link:disabled{
+    color: #D2D2D2;
+    border-bottom: 2px solid transparent;
+  }
+
+  .link-insta:hover{
+    scale: 1.1;
+  }
+  
