--- a/ClimaTecnico/src/Components/Hero/Hero.css
+++ b/ClimaTecnico/src/Components/Hero/Hero.css
@@ -177,7 +177,7 @@ gap: 10px;
         align-self: stretch;
     /* Text/M */
     font-family: Montserrat;
-    font-size: 18px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 500;
     line-height: 38px; /* 118.75% */
@@ -208,14 +208,14 @@ gap: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 4px;
+    gap: 8px;
 }
 
 .hero-formulario-info>h5{
     color: var(--Neutral-900, #2E2E2E);
 text-align: center;
 font-family: Montserrat;
-font-size: 20px;
+font-size: 24px;
 font-style: normal;
 font-weight: 700;
 line-height: 36px; /* 180% */
@@ -244,28 +244,28 @@ line-height: 20px; /* 142.857% */
    /* Media query para tabletas */
    @media (min-width: 744px) and (max-width: 1024px) {
     .hero-background {
-        height: 607px;
+        height: calc(607px + 0px);
       }
       
     .hero-overlay{
-        height: 607px;    
+        height: calc(607px + 0px);    
     }
 
   
     .hero-content{
         display: flex;
         width: calc(100% - 80px);
-        padding: 175px 40px 80px 40px;
+        padding: calc(80px + 95px) 40px 80px 40px;
         flex-direction: column;
         align-items: center;
-        gap: 96px;
+        gap: 94px;
     }
     .hero-info-container{
   
         display: flex;
-        width: calc(100% - 48px);
+        width: calc(100%);
 
-padding: 0px 24px;
+
 flex-direction: column;
 justify-content: center;
 
@@ -275,7 +275,7 @@ gap: 8px;
     .hero-info-container>h1{
         color: var(--Neutral-100, #FFF);
         text-align: center;
-        align-self: stretch;
+      
         /* Title/H1-Desktop/Tablet */
         font-family: Montserrat;
         font-size: 56px;
@@ -317,7 +317,7 @@ box-shadow: 4px 4px 8px 0px rgba(85, 85, 85, 0.25);
     display: flex;
 flex-direction: column;
 align-items: center;
-gap: 4px;
+gap: 8px;
 align-self: stretch;
 }
 
@@ -325,7 +325,7 @@ align-self: stretch;
     color: var(--Neutral-900, #2E2E2E);
     text-align: center;
     font-family: Montserrat;
-    font-size: 20px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 700;
     line-height: 36px; /* 180% */
@@ -384,8 +384,8 @@ align-self: stretch;
     .hero-info-container{
   
         display: flex;
-max-width: calc(360px - 48px);
-padding: 0px 24px;
+max-width: calc(360px - 0px);
+
 flex-direction: column;
 align-items: center;
 gap: 8px;
@@ -394,7 +394,7 @@ gap: 8px;
     .hero-info-container>h1{
         color: var(--Neutral-100, #FFF);
         text-align: center;
-        
+        width: 336px;
         /* Title/H1-Mobile */
         font-family: Montserrat;
         font-size: 38px;
@@ -403,6 +403,7 @@ gap: 8px;
         line-height: 45px; /* 118.421% */
         text-transform: uppercase;
         margin: 0;
+        align-self: stretch;
     }
     
         .hero-info-container > p {
@@ -437,14 +438,14 @@ box-shadow: 4px 4px 8px 0px rgba(85, 85, 85, 0.25);
     display: flex;
 flex-direction: column;
 align-items: center;
-gap: 4px;
+gap: 8px;
 }
 
 .hero-formulario-info>h5{
     color: var(--Neutral-900, #2E2E2E);
     text-align: center;
     font-family: Montserrat;
-    font-size: 20px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 700;
     line-height: 36px; /* 180% */
