--- a/ClimaTecnico/src/Components/Valores/Valores.css
+++ b/ClimaTecnico/src/Components/Valores/Valores.css
@@ -6,7 +6,7 @@
     .valores{
         display: flex;
     width: calc(100% - 64px);
-    padding: 48px 32px;
+    padding: 64px 32px;
     flex-direction: row;
     background: var(--Primary-100, #D8E5EE);
     justify-content: space-around;
@@ -18,6 +18,7 @@
     flex-direction: column;
     align-items: center;
     gap: 16px;
+    width: 220px;
     
     }
     
@@ -51,7 +52,7 @@
     .valores{
         display: flex;
         width: calc(100% - 64px);
-        padding: 48px 32px;
+        padding: 64px 32px;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -63,7 +64,8 @@
         flex-direction: column;
         align-items: center;
         gap: 16px;
-        align-self: stretch;
+        
+        width: 321px;
     
     }
     
@@ -114,7 +116,8 @@ line-height: 24px; /* 150% */
         justify-content: center;
         align-items: center;
         gap: 16px;
-        align-self: stretch;
+      
+        width: 321px;
     
     }
     
