--- a/ClimaTecnico/src/Components/NuestrosProyectos/NuestrosProyectos.css
+++ b/ClimaTecnico/src/Components/NuestrosProyectos/NuestrosProyectos.css
@@ -145,6 +145,10 @@ font-weight: 600;
 line-height: 24px; /* 150% */
 align-self: stretch;
       }
+      .proyectos-container {
+        max-width: 960px; /* Limita el ancho máximo del contenedor */
+        margin: 0 auto; /* Centra el contenedor en la pantalla */
+    }
     
 }
    /* Media query para tabletas */
