--- a/ClimaTecnico/src/Components/Servicios/Servicios.css
+++ b/ClimaTecnico/src/Components/Servicios/Servicios.css
@@ -97,6 +97,10 @@
         font-weight: 400;
         line-height: 20px; /* 142.857% */
     }
+    .servicios-cards-container {
+        max-width: 960px; /* Limita el ancho máximo del contenedor */
+        margin: 0 auto; /* Centra el contenedor en la pantalla */
+    }
     
 }
    /* Media query para tabletas */
