--- a/ClimaTecnico/src/Components/Header.css
+++ b/ClimaTecnico/src/Components/Header.css
@@ -345,8 +345,10 @@ gap: 16px;
         }
         
         
-        
-        
+        .link-button-clicked a {
+            color: var(--Secondary-500, #EB6933);
+          }
+          
         
         
         
