--- a/ClimaTecnico/src/Components/CustomSelect.css
+++ b/ClimaTecnico/src/Components/CustomSelect.css
@@ -1,56 +1,65 @@
-/* CustomSelect.css */
 .custom-select {
-    position: relative;
-    font-family: Montserrat;
-    width: 100%;
-  }
-  
-  .custom-select-trigger {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .custom-select-trigger span {
-    margin-right: 10px;
-  }
-  
-  .arrow {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 5px 5px 0;
-    border-color: #333 transparent transparent transparent;
-  }
-  
-  .custom-options {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    border: 1px solid #ccc;
-    border-radius: 0 0 5px 5px;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 1;
-  }
-  
-  .custom-option {
-    padding: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .custom-option:hover {
-    background-color: #f9f9f9;
-  }
-  
-  .selected {
-    background-color: #007bff;
-    color: #fff;
-  }
-  
+  position: relative;
+  width: calc(100% - 32px);
+  display: flex;
+padding: 8px 16px;
+align-items: center;
+gap: 10px;
+align-self: stretch;
+  border-radius: 8px;
+border: 1px solid var(--Neutral-400, #D2D2D2);
+background: var(--Neutral-100, #FFF);
+}
+
+
+.selected-option {
+  color: var(--Neutral-700, #828282);
+  flex: 1 0 0;
+  /* Text/XS */
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 142.857% */
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+}
+
+.options {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: calc(100% - 2px);
+  border: 1px solid var(--Neutro-200, #F3F2F2);
+  background: var(--Neutro-100, #FFF);
+  z-index: 1;
+  max-height: 200px; /* Altura máxima del menú */
+  overflow-y: auto; /* Habilitar el desplazamiento vertical */
+}
+
+.options>li {
+  color: var(--Neutral-900, #2E2E2E);
+
+/* Text/XS */
+font-family: Montserrat;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px; /* 142.857% */
+  padding: 10px;
+  cursor: pointer;
+  display: flex;
+padding: 12px 16px;
+align-items: center;
+align-self: stretch;
+border: 1px solid var(--Neutro-200, #F3F2F2);
+background: var(--Neutro-100, #FFF);
+}
+
+.options li:hover {
+  background-color: #e0e0e0;
+}
