--- a/ClimaTecnico/src/Components/Formulario/Formulario.css
+++ b/ClimaTecnico/src/Components/Formulario/Formulario.css
@@ -21,7 +21,28 @@
    
   }
 
+  .formulario-input::placeholder{
+    color: var(--Neutral-700, #828282);
+text-align: start;
 
+/* Text/XS */
+font-family: Montserrat;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px; /* 142.857% */
+  }
+  .formulario-textarea::placeholder{
+    color: var(--Neutral-700, #828282);
+text-align: start;
+
+/* Text/XS */
+font-family: Montserrat;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px; /* 142.857% */
+  }
   
 /* Media query para desktop */
 
@@ -145,6 +166,17 @@ border-radius: 8px;
 border: 1px solid var(--Neutral-400, #D2D2D2);
 background: var(--Neutral-100, #FFF);
   }
+  .formulario-input::placeholder{
+    color: var(--Neutral-700, #828282);
+text-align: start;
+
+/* Text/XS */
+font-family: Montserrat;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px; /* 142.857% */
+  }
 
   .formulario-input-select{
    
@@ -159,7 +191,6 @@ gap: 10px;
 border-radius: 8px;
 
 
-margin-bottom: 16px;
   }
 
   
@@ -181,6 +212,7 @@ flex-wrap: wrap;
 border-radius: 8px;
 border: 1px solid var(--Neutral-400, #D2D2D2);
 background: var(--Neutral-100, #FFF);
+margin-top: 16px;
   }
 
   .contact-button{
@@ -362,7 +394,7 @@ gap: 10px;
 border-radius: 8px;
 border: 1px solid var(--Neutral-400, #D2D2D2);
 background: var(--Neutral-100, #FFF);
-margin-bottom: 16px;
+
 border-right: 16px solid var(--Neutral-100, #FFF);
   }
 
@@ -390,6 +422,7 @@ flex-wrap: wrap;
 border-radius: 8px;
 border: 1px solid var(--Neutral-400, #D2D2D2);
 background: var(--Neutral-100, #FFF);
+margin-top: 16px;
   }
 
   .contact-button{
@@ -590,7 +623,7 @@ gap: 10px;
 border-radius: 8px;
 border: 1px solid var(--Neutral-400, #D2D2D2);
 background: var(--Neutral-100, #FFF);
-margin-bottom: 16px;
+
 border-right: 16px solid var(--Neutral-100, #FFF);
   }
 
@@ -618,6 +651,7 @@ flex-wrap: wrap;
 border-radius: 8px;
 border: 1px solid var(--Neutral-400, #D2D2D2);
 background: var(--Neutral-100, #FFF);
+margin-top: 16px;
   }
 
   .contact-button{
